[package]
name = "pocket-relay-udp-tunnel"
version = "0.0.0"
edition = "2021"
description = "Pocket Relay UDP tunnel "
readme = "README.md"
keywords = ["PocketRelay"]
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/PocketRelay/PocketRelayUDPTunnel"

[dependencies]
# Error handling and transforming
thiserror = "1"
